# ping_parking

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  domain-structure-plan.md  init_draft.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1b7ea1249a8b_add_unique_constraint_to_space_name_and_.py  2bd5bca61857_add_due_date_to_payments_table.py  4fad460056f6_add_unique_constraint_on_space_site_id_.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: agreements.py  auth.py  customers.py  health.py  payments.py  router.py  sites.py  spaces.py  system_logs.py  tags.py
backend/app/models/: __init__.py  admin_user.py  agreement.py  base.py  customer.py  payment.py  site.py  space.py  system_log.py  tag.py
backend/app/schemas/: agreement.py  customer.py  payment.py  site.py  space.py  system_log.py  tag.py
backend/app/services/: agreement_service.py  audit_logger.py  customer_service.py  payment_service.py  site_service.py  space_service.py  tag_service.py
backend/app/utils/: auth.py  crypto.py  errors.py  pricing.py  validators.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_agreement_overlap.py  test_agreements.py  test_audit.py  test_auth.py  test_crypto.py  test_customer_search.py  test_customers.py  test_health.py  test_payments.py  test_pricing.py  test_sites.py  test_space_status.py  test_spaces.py  test_tags.py
bugs/: future-agreements-overlap-validation.md  manual_test_fixes.md  (+3 more)
(+76 files in other folders)
